bug combat rows don't align Fixes #108 (#109)
* bug combat rows don't align Fixes #108

* - Move display: block to css
- add padding so that when there is only one usage on a weapon the usage cells (Skill, Damage, STR, DEX) line up properly with the other cells (HP, Price, Enc).  When there is more than one usage the non-usage cells "straddle" the usage cells

--- a/src/rqg.scss
+++ b/src/rqg.scss
@@ -401,6 +401,14 @@
       }
     }
 
+    .usagecontainer {
+      display: block;
+    }
+
+    .usagecell {
+      padding-top: 4px;
+    }
+
     &.weapon {
       grid-template-columns: [col-start] 30px auto auto repeat(8, max-content) [col-end];
 
